--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
+    "@tailwindcss/postcss": "^4.1.3",
+    "@tailwindcss/vite": "^4.1.3",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.6.3",
+    "lucide": "^0.487.0",
+    "lucide-react": "^0.487.0",
     "next": "^15.2.4",
+    "postcss": "^8.5.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.1.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "scripts": {
     "dev": "next dev",
@@ -13,6 +23,8 @@
   "devDependencies": {
     "@types/node": "22.14.0",
     "@types/react": "19.1.0",
+    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.8.3"
   }
 }
