--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,14 +21,18 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": "app",
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
   "include": [
     "next-env.d.ts",
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "tailwind.config.js"  ],
   "exclude": [
     "node_modules"
   ]
