--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
+    "@react-three/drei": "^10.0.6",
+    "@react-three/fiber": "^9.1.1",
     "@tailwindcss/postcss": "^4.1.3",
     "@tailwindcss/vite": "^4.1.3",
     "clsx": "^2.1.1",
@@ -12,7 +14,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.175.0"
   },
   "scripts": {
     "dev": "next dev",
@@ -26,11 +29,11 @@
     "@testing-library/react": "^16.3.0",
     "@types/node": "22.14.0",
     "@types/react": "19.1.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
+    "jsdom": "^26.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "5.8.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "jsdom": "^26.0.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.1"
   }
