--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@react-three/fiber": "^9.1.1",
     "@tailwindcss/postcss": "^4.1.3",
     "@tailwindcss/vite": "^4.1.3",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.3",
     "lucide": "^0.487.0",
